
aux_source_directory(./net NET_SRCS)
#aux_source_directory(./mongo MONGO_SRCS)
aux_source_directory(./util UTIL_SRCS)
aux_source_directory(./http HTTP_SRCS)
aux_source_directory(./parallel PARALLEL_SRCS)
aux_source_directory(./xml XML_SRCS)
set(SOURCES ${NET_SRCS} ${MONGO_SRCS} ${UTIL_SRCS} ${HTTP_SRCS} ${PARALLEL_SRCS} ${XML_SRCS})
ADD_DEFINITIONS(-std=c++11 -g -gdwarf-2 -W -Wall)
IF(CMAKE_SYSTEM_PROCESSOR MATCHES "i686")
	add_library(qing32 STATIC ${SOURCES})
ELSE()
	add_library(qing STATIC ${SOURCES})
ENDIF()

